--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,16 @@
 # gitignore
 
-coverage/
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.nyc_output
-lib
-lib_test
+/coverage
+/node_modules
+/npm-debug.log*
+/yarn-debug.log*
+/yarn-error.log*
+/.nyc_output
+/lib
+/lib_test
 
 # npmignore
 
-src/
-__tests__/
-.vscode/
+/src
+/__tests__
+/.vscode
