--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smake/eigen",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Typescript Module Template",
   "license": "MIT",
   "repository": "https://github.com/kuyoonjo/smake-lib-eigen.git",
@@ -36,19 +36,11 @@
     "watch": "npm run build -- --watch",
     "watch:test": "jest --watch"
   },
-  "dependencies": {
-    "@smake/libs": "^1.0.2",
-    "smake": "^0.3.12"
-  },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@smake/llvm": "^1.2.0",
     "@types/node": "^16.4.7",
-    "coveralls": "^3.1.1",
-    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.3.5"
